# MegaCMSai

./: .gitignore  GUCmail.py  PORTALagent.py  README.md  api.py  mailCheckerAgent.py  requirements.txt
cms-app/: .env.example  .gitignore  00-cms-basics.ipynb  01-files-into-context.ipynb  02-download-files.ipynb  03-grades-from-the-portal.ipynb  04-quiz-review-combined.ipynb  README.md  pyproject.toml  requirements.txt
cms-app/guc_cms/: __init__.py  _parse.py  _sites.py  client.py  models.py
cms-app/guc_portal/: _parse.py  _sites.py  client.py
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  Sidebar.jsx
guc_portal/: __init__.py  _sites.py  client.py  models.py
